--- a/Writings/Proposal/TEX/Sections/Implementation.tex
+++ b/Writings/Proposal/TEX/Sections/Implementation.tex
@@ -23,21 +23,23 @@ We will provide two configurations that this service can be deployed as: a simpl
 
 \subsection{Overview of Components and Modules}
 
-\begin{tabular}{|c|c|c|}
+\begin{tabular}{|c|p{6cm}|c|}
     \hline
-    \textbf{Component/Module}& \textbf{Purpose}\\
+    \textbf{Component/Module}& \textbf{Purpose} & \textbf{Language}\\
     \hline
-    Authentication Component (Server) & Handle the Authentication of Users and API Requests.\\ 
+    Authentication Component (Server) & Handle the Authentication of Users and API Requests. & JS (Express)\\ 
     \hline
-    Logging Component (Server) & Manage logging levels and messages.\\
+    Logging Component (Server) & Manage logging levels and messages. & JS (Express)\\
     \hline
-    User Management (Server) & Add, and remove users. Change Passwords.\\
+    User Management (Server) & Add, and remove users. Change Passwords. & JS (Express)\\
     \hline
-    User Dashboards (Server) & Populate pages with a user's stored passwords.\\
+    User Dashboards (Server) & Populate pages with a user's stored passwords. & JS (Express)\\
     \hline
-    Vulnerability Management (Server) & Configure and view vulnerability status.\\
+    Vulnerability Management (Server) & Configure and view vulnerability status. & JS (Express)\\
     \hline
-    Database & Store user access credentials and saved data.\\
+    User Interface (FE) & Reactive User Frontend. & JS (React)\\
+    \hline
+    Database & Store user access credentials and saved data. & External (MongoDB)\\
     \hline
 \end{tabular}
 
