--- a/Writings/Proposal/TEX/Sections/Implementation.tex
+++ b/Writings/Proposal/TEX/Sections/Implementation.tex
@@ -64,7 +64,7 @@ We will provide two configurations that this service can be deployed as: a simpl
     \hline
     Docker Engine & Containerization Platform & \href{https://github.com/moby/moby/blob/master/LICENSE}{Apache License, Version 2.0}\\ 
     \hline
-    Piano & Logging Library & \href{https://github.com/pinojs/pino/blob/main/LICENSE}{MIT}\\
+    Pino & Logging Library & \href{https://github.com/pinojs/pino/blob/main/LICENSE}{MIT}\\
     \hline
 \end{tabular}\\\\
 % \subsection{Overview of 3rd Party Services and APIs}
