--- a/Writings/Reports/Week5/main.tex
+++ b/Writings/Reports/Week5/main.tex
@@ -59,7 +59,8 @@ Finally I added the JSON Web Token check to most of the API endpoints and user p
 as part of the request bodies in order to complete the given task. At this time it simply prints the information out. I did not and do not plan to do much
 with regards to the frontend until I have to, as that is the least important in terms of functionality for me and this project.
 
-I also started to formalize the vulnerabilities that I can implement. However, that is a rolling task that will occur week-to-week.
+I also started to formalize the vulnerabilities that I can implement. However, that is a rolling task that will occur week-to-week. So as of now users can
+register and authenticate to the site and some of the APIs, but as other functionality is not implemented, not much else can be done by the user.
 
 \section{Not Completed}
 The primary goal was to implement authentication, design the collections used in the database and start implementing the APIs. One of my stretch goals
